--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 <span class="dot">•</span>
 <span>把信留给未来的你们</span>
 </footer>
+<div id="safe-door" class="door-overlay">
+    <div class="door-card">
+        <div class="door-icon">🦊🔒🦁</div>
+        <h2>小狐狸与大狮子的安全屋</h2>
+        <p>请输入我们之间的“暗号”</p>
+        
+        <div class="input-group">
+            <input type="password" id="door-key" placeholder="例如：我们的纪念日" />
+            <button id="open-btn">进入</button>
+        </div>
+        <p id="error-msg" class="error-msg hidden">暗号不对哦，再想想？</p>
+    </div>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
