--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div id="safe-door" class="door-overlay">
     <div class="door-card">
         <div class="door-icon">🦊🔒🦁</div>
-        <h2>小狐狸与大狮子的安全屋</h2>
+        <h2>小狐狸•大狮子安全屋</h2>
         <p>请输入我们之间的“暗号”</p>
         
         <div class="input-group">
